infrastructure/blog-api-debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: blog-api:apps/Deployment:default/blog-api
    deployment.kubernetes.io/revision: "13"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"blog-api:apps/Deployment:default/blog-api"},"name":"blog-api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"blog-api"}},"template":{"metadata":{"labels":{"app":"blog-api"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"blog-api-config"}},{"secretRef":{"name":"blog-api-secrets"}}],"image":"chouqe/blog-api-application:latest","livenessProbe":{" [...]
  creationTimestamp: "2026-01-04T14:57:23Z"
  generation: 14
  name: blog-api
  namespace: default
  resourceVersion: "517426"
  uid: ea3efe73-4ed4-41f0-9605-b647a13dcfe8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: blog-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-01-15T23:26:18+03:00"
      labels:
        app: blog-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: blog-api-config
        - secretRef:
            name: blog-api-secrets
        image: chouqe/blog-api-application:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/categories/
            port: 7070
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: application
        ports:
        - containerPort: 7070
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/categories/
            port: 7070
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /project/logs
          name: logs
      - args:
        - run
        - --server.http.listen-addr=0.0.0.0:8989
        - /etc/alloy/config.alloy
        image: grafana/alloy:latest
        imagePullPolicy: Always
        name: alloy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/alloy
          name: alloy-conf
        - mountPath: /project/logs
          name: logs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: logs
      - configMap:
          defaultMode: 420
          name: alloy-config-blog
        name: alloy-conf
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-01-09T16:25:48Z"
    lastUpdateTime: "2026-01-09T16:25:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-04T14:57:28Z"
    lastUpdateTime: "2026-01-15T20:26:46Z"
    message: ReplicaSet "blog-api-5c47484557" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 14
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
