infrastructure/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.test.prof-stankin.ru
      secretName: minio-console-tls
  rules:
    - host: minio.test.prof-stankin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: console
